# samples

./: LICENSE
ai_agents/bedrock/: README.md  deploy.sh
aws-neuron/ml-capacity-block/: mlcb.sh
aws-neuron/nki-test/: run_nki_test_with_setup.sbatch  run_nki_test_with_setup.sh  test_nki.py
aws-neuron/parallelcluster/: create_config_mlcb.sh  create_config_no_fsx.sh  parallelcluster-prerequisites-no-fsx.yaml  (+1 more)
fpga/: README.md  cfn_manager.sh  ec2-ssm.yml  ec2.yml  get_fpga_ami.sh  main-s3.yml  main-ssm.yml  main.yml  run-tasks.sh  setup-phase0-remote.sh  setup-phase0.json  setup-phase0.sh  setup_ssm_parameter.sh
inference/: README.md  requirements.txt  setup_mlflow.sh
mcp_security_book/: README.md
mcp_security_book/chapter21/runtime-ts-mcp-server/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  bedrock-agentcore-policy.json  client-oauth.ts  client.py  client.ts  deploy.py  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  utils.py
mcp_security_book/chapter21/runtime-ts-mcp-server/answer/: README.md
mcp_security_book/chapter21/runtime-ts-mcp-server/src/: .eslintrc.json  README.md  add.ts  package-lock.json  package.json  tsconfig.json
mcp_security_book/chapter25/: .env.example  .gitignore  README.md  guardrails_manager.py  pyproject.toml  setup.py
mcp_security_book/chapter25/data/: allowed_tools.json  attack_prompts.json  cline_system.md  content_filter_test_cases.json  japanese_test_cases.json  mcp_tools_config.json  pii_filter_test_cases.json  tool_shadowing_test_cases.json
mcp_security_book/chapter25/utils/: __init__.py  filter_configs.py  mcp_tools_generator.py  prompt_tester.py  tool_detection.py  topic_only_guardrail.py
(+209 files in other folders)
